finish of abouts page

--- a/projects.html
+++ b/projects.html
@@ -198,6 +198,7 @@
                 <p><strong>Figma Documentation:</strong> <a href="https://documenter.getpostman.com/view/41126830/2sAYdmjn4Z" target="_blank">Figma design</a></p>
             </div>
         </div>
+        </main>
   <footer>
         <p>
             &copy; 2025 shams alsaffar 
