finish of skills page

--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@
                     <img src="/images/new_experince-removebg-preview (1).png" alt="Experience Image" />
                 </a>
             </div>
+            <div class="carousel-item">
+            <a href="projects.html">
+                <img src="/images/Projects.png" alt="Projects Image" />
+            </a>
+        </div>
           
             <div class="carousel-item">
                 <a href="education.html">
