FINISH OF INTERESTS PAGE

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
     </header>
 
     <main>
+        <section id="contact">
         <h2 class="section-title">
             <span class="text-shadow-drop-bottom" style="--i:1">L</span>
             <span class="text-shadow-drop-bottom" style="--i:2">e</span>
