finish of README.md

--- a/projects.html
+++ b/projects.html
@@ -195,7 +195,7 @@
                 <h2>CV - Personal Website Project Details</h2>
                 <p><strong>Design:</strong> I designed the portfolio myself, following key UI/UX principles to ensure a clean, user-friendly experience.
                     I utilized Figma for wireframing and prototyping before implementing the design.</p>
-                <p><strong>Figma Documentation:</strong> <a href="https://documenter.getpostman.com/view/41126830/2sAYdmjn4Z" target="_blank">Figma design</a></p>
+                <p><strong>Figma Documentation:</strong> <a href="https://www.figma.com/proto/U7Yy5JlWdo6FtLhwRw7mUg/shams-Portfolio?node-id=0-1&t=WTaO3kfEFROlyyQp-1" target="_blank">Figma design</a></p>
             </div>
         </div>
         </main>
