--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <section id="experience" data-aos="fade-right">
         <div class="image-overlay-container" tabindex="1">
             <a href="experience.html">
-            <img src="/images/new_experince-removebg-preview (1).png" alt="Experience Image">
+            <img src="images/new_experince-removebg-preview (1).png" alt="Experience Image">
             <div class="overlay-text">
               <h2>Experience</h2>
          
@@ -54,7 +54,7 @@
         <section id="projects" data-aos="fade-down">
             <div class="image-overlay-container" tabindex="1">
                 <a href="projects.html">
-                <img src="/images/Projects.png" alt="Project Image">
+                <img src="images/Projects.png" alt="Project Image">
                 <div class="overlay-text">
                   <h2>Projekts</h2>
                 </div>
@@ -66,7 +66,7 @@
         <section id="skills" data-aos="fade-left">
             <div class="image-overlay-container" tabindex="1">
                 <a href="skills.html">
-                <img src="/images/skillmain-removebg-preview.png" alt="Skills Image">
+                <img src="images/skillmain-removebg-preview.png" alt="Skills Image">
                 <div class="overlay-text">
                   <h2>Skills</h2>
                 </div>
@@ -77,7 +77,7 @@
         <section id="education" data-aos="fade-right">
             <div class="image-overlay-container" tabindex="1">
                 <a href="education.html">
-                <img src="/images/new education.png" alt="Education Image">
+                <img src="images/new education.png" alt="Education Image">
                 <div class="overlay-text">
                   <h2>Education</h2>
                 </div>
@@ -88,7 +88,7 @@
         <section id="interests" data-aos="fade-left">
             <a href="interests.html">
             <div class="image-overlay-container">
-                <img src="/images/interests.png" alt="Interests Image" tabindex="1">
+                <img src="images/interests.png" alt="Interests Image" tabindex="1">
                 <div class="overlay-text">
                   <h2>Interests</h2>
                 </div>
@@ -98,7 +98,7 @@
               <section id="cv" data-aos="fade-left">
                 <a href="cv.html">
                 <div class="image-overlay-container">
-                    <img src="/images/Cv  .png" alt="CV image" tabindex="1">
+                    <img src="images/Cv  .png" alt="CV image" tabindex="1">
                     <div class="overlay-text">
                       <h2>CV</h2>
                     </div>
