--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <nav>
         <div class="left-nav">
          <ul>
-             <li><a href="#" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
+             <li><a href="index.html" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
          </ul>
         </div>
         <div class="right-nav">
@@ -32,7 +32,7 @@
             <h2>Who is SHAMS ALSAFFAR</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="/images/qatar.jpeg" alt="Shams Alsaffar"/>
+                    <img src="images/qatar.jpeg" alt="Shams Alsaffar"/>
                 </div> 
             <div class="about-text">
                 <p>Curious and dedicated developer currently studying and gaining experience in Java development.  
@@ -49,33 +49,33 @@
         <div class="carousel">
             <div class="carousel-item">
                 <a href="experience.html">
-                    <img src="/images/new_experince-removebg-preview (1).png" alt="Experience Image" />
+                    <img src="images/new_experince-removebg-preview (1).png" alt="Experience Image" />
                 </a>
             </div>
             <div class="carousel-item">
             <a href="projects.html">
-                <img src="/images/Projects.png" alt="Projects Image" />
+                <img src="images/Projects.png" alt="Projects Image" />
             </a>
         </div>
           
             <div class="carousel-item">
                 <a href="education.html">
-                <img src="/images/new education.png" alt="Education" />
+                <img src="images/new education.png" alt="Education" />
             </a>
             </div>
             <div class="carousel-item">
                 <a href="skills.html">
-                <img src="/images/skillmain-removebg-preview.png" alt="Skills" />
+                <img src="images/skillmain-removebg-preview.png" alt="Skills" />
             </a>
             </div>
             <div class="carousel-item">
                 <a href="interests.html">
-                <img src="/images/interests.png" alt="Interests"/>
+                <img src="images/interests.png" alt="Interests"/>
             </a>
             </div>
             <div class="carousel-item">
                 <a href="cv.html">
-                <img src="/images/Cv  .png" alt="Interests"/>
+                <img src="images/Cv  .png" alt="Interests"/>
             </a>
             </div>
         </div>
