--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <nav>
                 <div class="left-nav">
                  <ul>
-                     <li><a href="#" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
+                     <li><a href="index.html" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
                  </ul>
                 </div>
                 <div class="right-nav">
@@ -59,7 +59,7 @@
             <div class="contact-container">
 
                 <div class="contact-image">
-                    <img src="/images/Roma.jpeg" alt="Contact Illustration">
+                    <img src="images/Roma.jpeg" alt="Contact Illustration">
                 </div>
                 <div class="contact-content">
             <p>Interested in working together? Fill out some info and I should be in touch 
@@ -81,7 +81,8 @@
             
                    <i class="fas fa-envelope"></i><a href="mailto:shamsay_1985@yahoo.com">shamsay_1985@yahoo.com</a><br>
                    <i class="fas fa-phone"></i><a href="tel:+46707474460">070-747 44 60</a><br>
-                   <i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/shams-alsaffar-5a51b9357" target="_blank">LinkedIn Profile</a><br>
+                   <i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/shams-alsaffar-5a51b9357" target="_blank">Linkedln - Fullstack Student Profile</a><br>
+                   <i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/shams-alsaffar-241461173" target="_blank">Linkedln - Perofessional Experience Profile</a><br>
                    <i class="fab fa-github"></i><a href="https://github.com/shamsalsaffar" target="_blank">GitHub Profile</a>
           </div> 
         </div>
@@ -91,12 +92,12 @@
          <!-- Carousel Section -->
     <div class="carousel-container">
         <div class="carousel">
-          <div class="carousel-item"><a href="experience.html"><img src="/images/new_experince-removebg-preview (1).png" alt="Experience Image" /></a></div>
-          <div class="carousel-item"><a href="projects.html"><img src="/images/Projects.png" alt="Projects Image" /></a></div>
-          <div class="carousel-item"><a href="education.html"><img src="/images/new education.png" alt="Education" /></a></div>
-          <div class="carousel-item"><a href="skills.html"><img src="/images/skillmain-removebg-preview.png" alt="Skills" /></a></div>
-          <div class="carousel-item"><a href="interests.html"><img src="/images/interests.png" alt="Interests" /></a></div>
-          <div class="carousel-item"><a href="cv.html"><img src="/images/Cv  .png" alt="CV" /></a></div>
+          <div class="carousel-item"><a href="experience.html"><img src="images/new_experince-removebg-preview (1).png" alt="Experience Image" /></a></div>
+          <div class="carousel-item"><a href="projects.html"><img src="images/Projects.png" alt="Projects Image" /></a></div>
+          <div class="carousel-item"><a href="education.html"><img src="images/new education.png" alt="Education" /></a></div>
+          <div class="carousel-item"><a href="skills.html"><img src="images/skillmain-removebg-preview.png" alt="Skills" /></a></div>
+          <div class="carousel-item"><a href="interests.html"><img src="images/interests.png" alt="Interests" /></a></div>
+          <div class="carousel-item"><a href="cv.html"><img src="images/Cv  .png" alt="CV" /></a></div>
         </div>
       </div>
     </main>
