--- a/interests.html
+++ b/interests.html
@@ -16,7 +16,7 @@
             <nav>
                 <div class="left-nav">
                  <ul>
-                     <li><a href="#" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
+                     <li><a href="index.html" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
                  </ul>
                 </div>
                 <div class="right-nav">
@@ -59,10 +59,10 @@
         </div>
 
           <div class="interest-image">
-           <img class="slide-image" src="/images/41B02759-3F50-4321-8919-9CE2E27655B6_1_105_c.jpeg" alt="family image">
-          <img class="slide-image" src="/images/E562C5B2-5321-4215-9FFC-93D28623F6DF_1_105_c.jpeg" alt="family image">
-            <img class="slide-image" src="/images/barnroma.jpeg" alt="family image">
-            <img class="slide-image" src="/images/9EFF86E0-4BF2-4FB5-8464-BA49EBB580A1.jpeg" alt="family image">
+           <img class="slide-image" src="images/41B02759-3F50-4321-8919-9CE2E27655B6_1_105_c.jpeg" alt="family image">
+          <img class="slide-image" src="images/E562C5B2-5321-4215-9FFC-93D28623F6DF_1_105_c.jpeg" alt="family image">
+            <img class="slide-image" src="images/barnroma.jpeg" alt="family image">
+            <img class="slide-image" src="images/9EFF86E0-4BF2-4FB5-8464-BA49EBB580A1.jpeg" alt="family image">
         
         </div>
       
@@ -71,12 +71,12 @@
        <!-- Carousel Section -->
        <div class="carousel-container">
         <div class="carousel">
-          <div class="carousel-item"><a href="experience.html"><img src="/images/new_experince-removebg-preview (1).png" alt="Experience Image" /></a></div>
-          <div class="carousel-item"><a href="projects.html"><img src="/images/Projects.png" alt="Projects Image" /></a></div>
-          <div class="carousel-item"><a href="education.html"><img src="/images/new education.png" alt="Education" /></a></div>
-          <div class="carousel-item"><a href="skills.html"><img src="/images/skillmain-removebg-preview.png" alt="Skills" /></a></div>
-          <div class="carousel-item"><a href="interests.html"><img src="/images/interests.png" alt="Interests" /></a></div>
-          <div class="carousel-item"><a href="cv.html"><img src="/images/Cv  .png" alt="CV" /></a></div>
+          <div class="carousel-item"><a href="experience.html"><img src="images/new_experince-removebg-preview (1).png" alt="Experience Image" /></a></div>
+          <div class="carousel-item"><a href="projects.html"><img src="images/Projects.png" alt="Projects Image" /></a></div>
+          <div class="carousel-item"><a href="education.html"><img src="images/new education.png" alt="Education" /></a></div>
+          <div class="carousel-item"><a href="skills.html"><img src="images/skillmain-removebg-preview.png" alt="Skills" /></a></div>
+          <div class="carousel-item"><a href="interests.html"><img src="images/interests.png" alt="Interests" /></a></div>
+          <div class="carousel-item"><a href="cv.html"><img src="images/Cv  .png" alt="CV" /></a></div>
         </div>
       </div>
     </main>
