voice modification  and skills

--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="left-nav">
                 <ul>
-                    <li><a href="#" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
+                    <li><a href="index.html" class="menu-link" data-section="portfolio">SHAMS ALSAFFAR</a></li>   
                 </ul>
             </div>
             <div class="right-nav">
