--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
       
     </header>
-    <audio id="welcomeAudio" src="audio/shams.mp3"></audio>
+    <audio id="welcomeAudio" controls src="audio/shams.mp3"></audio>
 
     <main>
      
