--- a/skills.html
+++ b/skills.html
@@ -54,12 +54,12 @@
     <!-- Carousel Section -->
     <div class="carousel-container">
       <div class="carousel">
-        <div class="carousel-item"><a href="experience.html"><img src="/images/new_experince-removebg-preview (1).png" alt="Experience Image" /></a></div>
-        <div class="carousel-item"><a href="projects.html"><img src="/images/Projects.png" alt="Projects Image" /></a></div>
-        <div class="carousel-item"><a href="education.html"><img src="/images/new education.png" alt="Education" /></a></div>
-        <div class="carousel-item"><a href="skills.html"><img src="/images/skillmain-removebg-preview.png" alt="Skills" /></a></div>
-        <div class="carousel-item"><a href="interests.html"><img src="/images/interests.png" alt="Interests" /></a></div>
-        <div class="carousel-item"><a href="cv.html"><img src="/images/Cv  .png" alt="CV" /></a></div>
+        <div class="carousel-item"><a href="experience.html"><img src="images/new_experince-removebg-preview (1).png" alt="Experience Image" /></a></div>
+        <div class="carousel-item"><a href="projects.html"><img src="images/Projects.png" alt="Projects Image" /></a></div>
+        <div class="carousel-item"><a href="education.html"><img src="images/new education.png" alt="Education" /></a></div>
+        <div class="carousel-item"><a href="skills.html"><img src="images/skillmain-removebg-preview.png" alt="Skills" /></a></div>
+        <div class="carousel-item"><a href="interests.html"><img src="images/interests.png" alt="Interests" /></a></div>
+        <div class="carousel-item"><a href="cv.html"><img src="images/Cv  .png" alt="CV" /></a></div>
       </div>
     </div>
     </section>
