add fullstack analys to ecoScape project

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                 </p>
                 <div class="tags">
                     <span>Java</span><span>Spring Boot</span><span>PostgreSQL</span><span>JWT</span>
-                    <span>JPA</span><span>Hibernate</span>
+                    <span>JPA</span><span>Hibernate</span><span>React</span><span>CSS</span><span>Stripe</span><span>JavaMail</span>
                 </div>
                 <a href="//github.com/ecoscapeteam/ecoscape.git"
                  target="_blank">GitHub Repository of EcoScape</a>
@@ -162,6 +162,7 @@
                 <h2>EcoScape Project Details</h2>
                 <p><strong>My Role:</strong> I was responsible for developing the booking functionality and booking confirmation system in EcoScape. This included implementing backend logic for managing bookings, ensuring secure and efficient data handling with Spring Boot and PostgreSQL, and integrating email notifications to confirm and cancel bookings.</p>
                 <p><strong>API Documentation:</strong> <a href="https://documenter.getpostman.com/view/41126830/2sAYdmjn4Z" target="_blank">RESTful API Result</a></p>
+                <p><strong>Fullstack Analays:</strong><a href="https://bit.ly/FullStackEcoScapeAnlays" target="_blank">Fullstack EcoScape Analays</a></p>
             </div>
         </div>
          <!-- Modal for plantswap -->
